<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="open_console"
        android:enabled="true"
        android:icon="@drawable/ic_widget_logo"
        android:shortcutShortLabel="@string/shortcut_console_short"
        android:shortcutLongLabel="@string/shortcut_console_long">
        <intent
            android:action="com.icy.icycheak.action.OPEN_CONSOLE"
            android:targetPackage="com.icy.icycheak"
            android:targetClass="com.icy.icycheak.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="export_report"
        android:enabled="true"
        android:icon="@drawable/ic_widget_logo"
        android:shortcutShortLabel="@string/shortcut_export_short"
        android:shortcutLongLabel="@string/shortcut_export_long">
        <intent
            android:action="com.icy.icycheak.action.EXPORT_REPORT"
            android:targetPackage="com.icy.icycheak"
            android:targetClass="com.icy.icycheak.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>